fix(styles): adjust colors and alignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,14 @@
 .appContainer {
-    color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    background-color: #38386c;
+    color: white;
+}
+
+.title {
+    margin-bottom: 20px;
 }
